--- a/package.json
+++ b/package.json
@@ -14,62 +14,63 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "agent-base": "^6.0.2",
     "abbrev": "^1.1.1",
+    "agent-base": "^6.0.2",
     "agentkeepalive": "^4.2.1",
-    "ansi-regex": "^5.0.1",
     "aggregate-error": "^3.1.0",
-    "anymatch": "^3.1.3",
-    "are-we-there-yet": "^3.0.1",
-    "aproba": "^2.0.0",
-    "arrify": "^1.0.1",
+    "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "aproba": "^2.0.0",
+    "are-we-there-yet": "^3.0.1",
+    "arrify": "^1.0.1",
     "async-foreach": "^0.1.3",
-    "binary-extensions": "^2.2.0",
     "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
     "cacache": "^16.1.3",
-    "chalk": "^4.1.2",
+    "camelcase": "^5.3.1",
     "camelcase-keys": "^6.2.2",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "chownr": "^2.0.0",
     "clean-stack": "^2.2.0",
+    "cleave.js": "^1.6.0",
     "cliui": "^8.0.1",
     "color-convert": "^2.0.1",
-    "camelcase": "^5.3.1",
     "color-name": "^1.1.4",
+    "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
     "console-control-strings": "^1.1.0",
-    "color-support": "^1.1.3",
     "core-util-is": "^1.0.3",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.4",
-    "delegates": "^1.0.0",
     "decamelize": "^1.2.0",
-    "depd": "^1.1.2",
     "decamelize-keys": "^1.1.1",
+    "delegates": "^1.0.0",
+    "depd": "^1.1.2",
     "emoji-regex": "^8.0.0",
-    "env-paths": "^2.2.1",
     "encoding": "^0.1.13",
+    "env-paths": "^2.2.1",
     "err-code": "^2.0.3",
-    "escalade": "^3.1.1",
     "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
     "fill-range": "^7.0.1",
     "find-up": "^4.1.0",
     "fs-minipass": "^2.1.0",
-    "escape-string-regexp": "^1.0.5",
+    "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.1",
     "gauge": "^4.0.4",
     "gaze": "^1.1.3",
     "get-caller-file": "^2.0.5",
     "get-stdin": "^4.0.1",
-    "fs.realpath": "^1.0.0",
     "glob": "^7.2.3",
     "glob-parent": "^5.1.2",
     "globule": "^1.3.4",
-    "hard-rejection": "^2.1.0",
     "graceful-fs": "^4.2.10",
+    "hard-rejection": "^2.1.0",
     "has": "^1.0.3",
     "has-flag": "^4.0.0",
     "has-unicode": "^2.0.1",
@@ -78,19 +79,19 @@
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.1",
     "humanize-ms": "^1.2.1",
+    "iconv-lite": "^0.6.3",
+    "ignore-by-default": "^1.0.1",
+    "imurmurhash": "^0.1.4",
     "indent-string": "^4.0.0",
     "infer-owner": "^1.0.4",
-    "imurmurhash": "^0.1.4",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
-    "iconv-lite": "^0.6.3",
     "ip": "^2.0.0",
     "is-arrayish": "^0.2.1",
-    "is-core-module": "^2.11.0",
     "is-binary-path": "^2.1.0",
-    "is-fullwidth-code-point": "^3.0.0",
-    "ignore-by-default": "^1.0.1",
+    "is-core-module": "^2.11.0",
     "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
     "is-glob": "^4.0.3",
     "is-lambda": "^1.0.1",
     "is-number": "^7.0.0",
@@ -115,21 +116,21 @@
     "minipass-collect": "^1.0.2",
     "minipass-fetch": "^2.1.2",
     "minipass-flush": "^1.0.5",
-    "mkdirp": "^1.0.4",
+    "minipass-pipeline": "^1.2.4",
     "minipass-sized": "^1.0.3",
     "minizlib": "^2.1.2",
-    "minipass-pipeline": "^1.2.4",
+    "mkdirp": "^1.0.4",
     "ms": "^2.1.2",
     "nan": "^2.17.0",
     "negotiator": "^0.6.3",
-    "nopt": "^5.0.0",
     "node-gyp": "^8.4.1",
+    "nopt": "^5.0.0",
     "normalize-package-data": "^3.0.3",
     "normalize-path": "^3.0.0",
     "npmlog": "^6.0.2",
+    "once": "^1.4.0",
     "p-limit": "^2.3.0",
     "p-locate": "^4.1.0",
-    "once": "^1.4.0",
     "p-map": "^4.0.0",
     "p-try": "^2.2.0",
     "parse-json": "^5.2.0",
@@ -143,10 +144,11 @@
     "promise-retry": "^2.0.1",
     "pstree.remy": "^1.1.8",
     "quick-lru": "^4.0.1",
-    "read-pkg-up": "^7.0.1",
     "read-pkg": "^5.2.0",
-    "redent": "^3.0.0",
+    "read-pkg-up": "^7.0.1",
+    "readable-stream": "^3.6.0",
     "readdirp": "^3.6.0",
+    "redent": "^3.0.0",
     "require-directory": "^2.1.1",
     "resolve": "^1.22.1",
     "retry": "^0.12.0",
@@ -156,24 +158,23 @@
     "sass-graph": "^4.0.1",
     "scss-tokenizer": "^0.4.3",
     "semver": "^7.3.8",
-    "readable-stream": "^3.6.0",
     "set-blocking": "^2.0.0",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
     "signal-exit": "^3.0.7",
     "simple-update-notifier": "^1.1.0",
     "smart-buffer": "^4.2.0",
-    "socks-proxy-agent": "^7.0.0",
     "socks": "^2.7.1",
-    "spdx-correct": "^3.1.1",
+    "socks-proxy-agent": "^7.0.0",
     "source-map": "^0.7.4",
+    "spdx-correct": "^3.1.1",
     "spdx-exceptions": "^2.3.0",
     "spdx-expression-parse": "^3.0.1",
     "spdx-license-ids": "^3.0.12",
     "ssri": "^9.0.1",
     "stdout-stream": "^1.4.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "strip-indent": "^3.0.0",
     "supports-color": "^7.2.0",
@@ -194,8 +195,8 @@
     "wrap-ansi": "^7.0.0",
     "wrappy": "^1.0.2",
     "y18n": "^5.0.8",
-    "yargs": "^17.6.2",
     "yallist": "^4.0.0",
+    "yargs": "^17.6.2",
     "yargs-parser": "^20.2.9"
   },
   "repository": {
